# django-rest-starter

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.override.yml  compose.yml  env.example  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
apps/shared/: validators.py
apps/users/: admin.py  forms.py  managers.py  models.py
apps/users/migrations/: 0001_initial.py
core/: exceptions.py  permissions.py  urls.py
core/settings/: base.py  local.py  production.py
